--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bootstrap-notify": "^3.1.3",
     "bootstrap-select": "^1.12.4",
     "bootstrap-tagsinput": "^0.7.1",
-    "cropperjs": "^1.1.3",
+    "cropperjs": "1.1.3",
     "datatables": "^1.10.13",
     "date-format-lite": "^17.7.0",
     "laravel-elixir": "^6.0.0-15",
